Adding a script into the index.html to improve the app.

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
     <script src="common/directives/force-integer-value.js"></script>
     <script src="common/filters/filters.js"></script>
     <script src="features/app.js"></script>
+    <script src="features/enviroment/config.js"></script>
     <script src="features/section/section.js"></script>
     <!-- endbuild -->
 
